# SPL_ASS3_Client

./: CMakeLists.txt  makefile
include/: EncoderDecoder.h  Task.h
src/: EncoderDecoder.cpp  KeyboardTask.cpp  NetTask.cpp  Task.cpp  connectionHandler.cpp  main.cpp  twoThreadClient.cpp
